http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=548685 Add more details on the individual commands to the man page
git-svn-id: https://fslint.googlecode.com/svn/trunk@246 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 fslint (2.41-1) unstable; urgency=low
 
   * bump to devel version
-  * Use POSIX process substitution shell syntax Closes: 548787)
+  * Use POSIX process substitution shell syntax (Closes: 548787)
+  * Add detail on each fslint command to man page  (Closes: 548685)
 
  -- Pádraig Brady <P@draigBrady.com>  tue, 21 jul 2009 01:58:00 +0000
 
