Remove an erroneous translation of $PATH from the new Catalan translation
git-svn-id: https://fslint.googlecode.com/svn/trunk@247 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/ca.po
+++ b/po/ca.po
@@ -247,7 +247,7 @@ msgstr "Directoris buits"
 
 #: ../fslint.glade:2250
 msgid "Search $PATH"
-msgstr "Cerca $RUTA"
+msgstr "Cerca $PATH"
 
 #: ../fslint.glade:2363
 msgid "Non stripped binaries"
