--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fslint (2.42-1) unstable; urgency=low
+
+  * bump to release version
+
+ -- pádraig brady <p@draigbrady.com>  thu, 29 apr 2010 08:31:00 +0000
+
 fslint (2.41-1) unstable; urgency=low
 
   * bump to devel version
