--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ fslint (2.42-1) unstable; urgency=low
 
   * bump to release version
 
- -- pádraig brady <p@draigbrady.com>  thu, 29 apr 2010 08:31:00 +0000
+ -- Pádraig Brady <P@draigBrady.com>  thu, 29 apr 2010 08:31:00 +0000
 
 fslint (2.41-1) unstable; urgency=low
 
