Fix another issue introduced in 2.40 when we switched finded from reporting empty leaf dirs to reporting just empty branches.  If we pass non empty directories and do not recurse, then we would have reported the first dir as empty.  So for this case just use the original `find -type f -empty` method to report dirs. This fixes issue 48.
git-svn-id: https://fslint.googlecode.com/svn/trunk@255 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.43 dd/mm/yy
+	* Fixes:
+		* finded now doesn't report passed non empty directories when
+		  not recursing. This regression was introduced in 2.40.
 
 2.42 29/04/10
 	* Translations:
