Fix the display of the wildcard dialog in German and Hungarian locales. The issue was always present for Hungarian, but introduced by r244 for German. Bug report from Michael Letz.
git-svn-id: https://fslint.googlecode.com/svn/trunk@261 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Fixes:
 		* finded now doesn't report passed non empty directories when
 		  not recursing. This regression was introduced in 2.40.
+		* The wildcard selection dialog is displayed correctly again
+		  in German locales. This regression was introduced in 2.42.
 
 2.42 29/04/10
 	* Translations:
