Document in the common -rf options in the man page Reported by @WyattEpp
git-svn-id: https://fslint.googlecode.com/svn/trunk@264 494acc53-a219-0410-adff-8f8ff343f446

--- a/man/fslint-gui.1
+++ b/man/fslint-gui.1
@@ -42,6 +42,12 @@ further details its parameters.
 If [PATHS] are specified, they become the default search path,
 otherwise the current directory becomes the default.
 .TP
+\fB\-f\fR
+always print full paths even if only a single path is specified
+.TP
+\fB\-r\fR
+turn OFF recursion
+.TP
 \fB\-\-version\fR
 Display the fslint version and exit
 .TP
