Maintain meta data (attributes, owner etc.) when cleaning redundant whitespace from files. Fixes issue 61
git-svn-id: https://fslint.googlecode.com/svn/trunk@265 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -4,6 +4,7 @@
 		  not recursing. This regression was introduced in 2.40.
 		* The wildcard selection dialog is displayed correctly again
 		  in German locales. This regression was introduced in 2.42.
+		* File metadata is now maintained when cleaning whitespace.
 
 2.42 29/04/10
 	* Translations:
