Add polish translation from Bartosz Zaliński
git-svn-id: https://fslint.googlecode.com/svn/trunk@266 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,6 @@
 2.43 dd/mm/yy
+	* Translations:
+		* Added: Polish.
 	* Fixes:
 		* finded now doesn't report passed non empty directories when
 		  not recursing. This regression was introduced in 2.40.
