Add support for selecting all files from the same folder as a particular file.
git-svn-id: https://fslint.googlecode.com/svn/trunk@272 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -7,6 +7,9 @@
 		* The wildcard selection dialog is displayed correctly again
 		  in German locales. This regression was introduced in 2.42.
 		* File metadata is now maintained when cleaning whitespace.
+	* Improvements:
+		* Add support for selecting all files from a the same folder
+		  as another file.
 
 2.42 29/04/10
 	* Translations:
