Update translations from launchpad. Fixes issue 77
git-svn-id: https://fslint.googlecode.com/svn/trunk@275 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,9 @@
 2.43 dd/mm/yy
 	* Translations:
 		* Added: Polish.
+		* Updated: Galicianm,Czech,Spanish,France,Romanian,Serbian,
+		  Russian,Swedish,German.
+
 	* Fixes:
 		* finded now doesn't report passed non empty directories when
 		  not recursing. This regression was introduced in 2.40.
