--- a/po/gl.po
+++ b/po/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-12-15 12:03+0000\n"
+"PO-Revision-Date: 2010-06-24 12:46+0000\n"
 "Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2012-02-29 23:20+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -31,11 +31,11 @@ msgstr "_Renomear..."
 
 #: ../fslint.glade:130
 msgid "Select using wildcard"
-msgstr "Seleccione usando comodins"
+msgstr "Seleccione usando comodíns"
 
 #: ../fslint.glade:139
 msgid "Unselect using wildcard"
-msgstr "Deseleccione usando comodins"
+msgstr "Deseleccione usando comodíns"
 
 #: ../fslint.glade:148
 msgid "within groups"
@@ -43,15 +43,15 @@ msgstr "dentro dos grupos"
 
 #: ../fslint.glade:157
 msgid "Select all but first"
-msgstr "Seleccione todo, pero o primeiro"
+msgstr "Seleccione todo, agás o primeiro"
 
 #: ../fslint.glade:166
 msgid "Select all but newest"
-msgstr "Seleccione todo, pero o máis novo"
+msgstr "Seleccione todo, agás o máis novo"
 
 #: ../fslint.glade:175
 msgid "Select all but oldest"
-msgstr "Seleccione todo, pero o máis vello"
+msgstr "Seleccione todo, agás o máis vello"
 
 #: ../fslint.glade:188
 msgid "Toggle selection"
@@ -75,7 +75,7 @@ msgstr "Directorios para buscar"
 
 #: ../fslint.glade:454
 msgid "recurse?"
-msgstr "Recurso?"
+msgstr "recursivo?"
 
 #: ../fslint.glade:478
 msgid "Search path"
@@ -150,16 +150,16 @@ msgstr ") para"
 
 #: ../fslint.glade:1367 ../fslint-gui:938
 msgid "Conflicting files"
-msgstr "Ficheiros conflictivos"
+msgstr "Ficheiros conflitivos"
 
 #: ../fslint.glade:1375 ../fslint.glade:1438 ../fslint-gui:936
 #: ../fslint-gui:945
 msgid "Aliases"
-msgstr "Alcumes"
+msgstr "Aliases"
 
 #: ../fslint.glade:1414 ../fslint-gui:951
 msgid "Case conflicts"
-msgstr "Conflictos maiúsculas / minúsculas"
+msgstr "Conflitos maiúsculas / minúsculas"
 
 #: ../fslint.glade:1422 ../fslint-gui:947
 msgid "Same names"
@@ -306,7 +306,7 @@ msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
 msgstr ""
-"Todos (excepto os seleccionados) usando ligazóns absolutas\n"
+"Todos (agás os seleccionados) usando ligazóns absolutas\n"
 "(ou ligazóns relativas se esta nun ficheiro de sistema diferente)"
 
 #: ../fslint.glade:3298
@@ -365,15 +365,15 @@ msgstr "Nomes de ficheiro problemáticos"
 
 #: ../fslint-gui:568
 msgid "Possibly conflicting commands or filenames"
-msgstr "Posiblemente ordes ou nomes conflictivos"
+msgstr "Posiblemente ordes ou nomes conflitivos"
 
 #: ../fslint-gui:569
 msgid "Possibly old temporary files"
-msgstr "Posiblemente ficheiro temporais antigos"
+msgstr "Posiblemente ficheiros temporais antigos"
 
 #: ../fslint-gui:570
 msgid "Problematic symbolic links"
-msgstr "Ligazóns relativas problematicas"
+msgstr "Ligazóns relativas problemáticas"
 
 #: ../fslint-gui:571
 msgid "Files with missing user IDs"
@@ -393,7 +393,7 @@ msgstr "Espazo en branco erroneo nun ficheiro de texto"
 
 #: ../fslint-gui:580
 msgid "Invalid path ["
-msgstr "Ruta non válida ["
+msgstr "Ruta incorrecta ["
 
 #: ../fslint-gui:621 ../fslint-gui:1312
 msgid "searching"
@@ -479,11 +479,11 @@ msgstr "Interrompido polo usuario"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr "detido"
+msgstr "en pausa"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
-msgstr "Erro iniciando xdg-open"
+msgstr "Produciuse un erro ao iniciar xdg-open"
 
 #: ../fslint-gui:1464
 msgid "Rename:"
@@ -492,13 +492,15 @@ msgstr "Renomear:"
 #: ../fslint-gui:1475 ../fslint-gui:1516
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Erro: [%s] non pode representarse no seu sistema de ficheiros"
+msgstr ""
+"Produciuse un erro: [%s] non pode representarse no seu sistema de ficheiros"
 
 #: ../fslint-gui:1485
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
-"Erro: non pode renomearse [%(old_path)s] como [%(new_path)s], xa existe"
+"Produciuse un erro: non pode renomearse [%(old_path)s] como [%(new_path)s], "
+"xa existe"
 
 #: ../fslint-gui:1505
 msgid "wildcard:"
@@ -506,11 +508,12 @@ msgstr "comodín:"
 
 #: ../fslint-gui:1710
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Sintoo, vostede debe ser root para borrar os paquetes de sistema."
+msgstr ""
+"Sintoo, vostede debe ser administrador para borrar os paquetes de sistema."
 
 #: ../fslint-gui:1715
 msgid "Are you sure you want to delete"
-msgstr "Esta seguro de querer borralos"
+msgstr "Esta seguro de querer eliminalos"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
@@ -523,7 +526,7 @@ msgstr "Calculando as dependencias..."
 #: ../fslint-gui:1760
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d paquetes extra que necesitan ser borrados.\n"
+msgstr "%d paquetes extra que necesitan ser eliminados.\n"
 
 #: ../fslint-gui:1761
 msgid "Please review the updated selection."
@@ -535,7 +538,7 @@ msgstr "Eliminando paquetes..."
 
 #: ../fslint-gui:1814
 msgid " items deleted"
-msgstr " elementos borrados"
+msgstr " elementos eliminados"
 
 #: ../fslint-gui:1827
 msgid "Are you sure you want to merge ALL files?\n"
