fix findup -d to support files with leading or trailing whitespace
This fixes issue 79


git-svn-id: https://fslint.googlecode.com/svn/trunk@276 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,7 @@
 		* The wildcard selection dialog is displayed correctly again
 		  in German locales. This regression was introduced in 2.42.
 		* File metadata is now maintained when cleaning whitespace.
+		* findup -d now supports file names with trailing whitespace.
 	* Improvements:
 		* Add support for selecting all files from a the same folder
 		  as another file.
