--- a/doc/NEWS
+++ b/doc/NEWS
@@ -3,7 +3,6 @@
 		* Added: Polish.
 		* Updated: Galicianm,Czech,Spanish,France,Romanian,Serbian,
 		  Russian,Swedish,German.
-
 	* Fixes:
 		* finded now doesn't report passed non empty directories when
 		  not recursing. This regression was introduced in 2.40.
@@ -11,6 +10,9 @@
 		  in German locales. This regression was introduced in 2.42.
 		* File metadata is now maintained when cleaning whitespace.
 		* findup -d now supports file names with trailing whitespace.
+		* Changed the complexity of deleting files from O((n/2)*(n+1))
+                  to O(n), n being the number of items in the GtkCList, not
+                  the number of items being deleted.
 	* Improvements:
 		* Add support for selecting all files from a the same folder
 		  as another file.
