--- a/doc/NEWS
+++ b/doc/NEWS
@@ -13,6 +13,7 @@
 		* Changed the complexity of deleting files from O((n/2)*(n+1))
                   to O(n), n being the number of items in the GtkCList, not
                   the number of items being deleted.
+                * findns and findul now work with findutils >= 4.5.11
 	* Improvements:
 		* Add support for selecting all files from a the same folder
 		  as another file.
