--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fslint (2.45-1) unstable; urgency=low
+
+  * bump to devel version
+
+ -- Pádraig Brady <P@draigBrady.com>  mon, 13 jan 2014 08:32:00 +0000
+
 fslint (2.44-1) unstable; urgency=low
 
   * bump to release version
