Fix group selection regression in release 2.44
Introduced when changing delete to not be O(n^2).
Now selection within groups and auto removal
of groups works correctly again.

Fixes issue 94


git-svn-id: https://fslint.googlecode.com/svn/trunk@291 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.45 dd/mm/yy
+	* Fixes:
+		* Selecting within and removal of GUI groups works again.
+		  This regression was introduced in 2.44.
 
 2.44 13/01/14
 	* Translations:
