fix GUI issue precluding searching for symlink issues
Remove extraneous debugging, which caused bad symlink
functionality to fail in the GUI.  The debugging
was added weeks before the release and I didn't notice
the staged changes as I was too used to having such
info directly visible in my bash prompt for git repos.


git-svn-id: https://fslint.googlecode.com/svn/trunk@293 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Fixes:
 		* Selecting within and removal of GUI groups works again.
 		  This regression was introduced in 2.44.
+		* "Bad symlinks" functionality works in the GUI again.
+		  This regression was introduced in 2.44.
 
 2.44 13/01/14
 	* Translations:
