fix dangling symlink reporting for symlink names ending in digits
* fslint/findbl: Tighten up the regex so that we don't discard
the symlink name portion of the result, when the symlink name
ends in 2 digits


git-svn-id: https://fslint.googlecode.com/svn/trunk@294 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -4,6 +4,8 @@
 		  This regression was introduced in 2.44.
 		* "Bad symlinks" functionality works in the GUI again.
 		  This regression was introduced in 2.44.
+		* Dangling symlinks are reported correctly for symlinks
+		  whose names end in 2 digits.
 
 2.44 13/01/14
 	* Translations:
