--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,8 @@
 		  This regression was introduced in 2.44.
 		* Dangling symlinks are reported correctly for symlinks
 		  whose names end in 2 digits.
+		* Empty directories now only lists actual empty dirs
+		  even if extra find parameters are specified.
 
 2.44 13/01/14
 	* Translations:
