ignore "excluded paths" when reporting "empty directories"
Not doing so would possibly cause non empty dirs to be listed,
thus breaking the rmdir functionality.
Fixes issue #106

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,8 @@
 		  whose names end in 2 digits.
 		* Empty directories now only lists actual empty dirs
 		  even if extra find parameters are specified.
+		* Empty directories now ignore specified exluded paths, as
+		  they can impact whether an "empty" directory can be removed.
 
 2.44 13/01/14
 	* Translations:
