findup: include zero length files by default
* fslint/findup: Remove the -size +0c find argument,
which will now include zero length files by default.
* fslint.glade: Add minimum size option on duplicates tab,
defaulting to exluding zero length files.  The large churn
is due to new properties written by glade-2.
* doc/NEWS: Mention the improvement.
* fslint-gui (buildFindParameters): Add the -size find argument
if specified.  If not using units, then reduce the value by 1
so that it's treated as >=.

Fixes issue #105

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,9 @@
 		  even if extra find parameters are specified.
 		* Empty directories now ignore specified exluded paths, as
 		  they can impact whether an "empty" directory can be removed.
+	* Improvements:
+		* findup now includes zero length files by default.  This can
+		  be changed with -size +0c, or the new GUI min size option.
 
 2.44 13/01/14
 	* Translations:
