fslint-gui: make "Select from same folder" scalable
It was reported that this function on a large results
would induce CPU and memory pressure.
Use xrange() rather than range() to reduce memory use,
and avoid clist.get_text() to reduce CPU overhead.

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -13,6 +13,7 @@
 	* Improvements:
 		* findup now includes zero length files by default.  This can
 		  be changed with -size +0c, or the new GUI min size option.
+		* "Select from same folder" is no less CPU and RAM intensive.
 
 2.44 13/01/14
 	* Translations:
