fix quoting of single quotes in extra find parameters
Reproduced with:
  $ fslint/findup -path "a'b"
  fslint/supprt/getfpf: eval: line 76: unexpected EOF...

Fixes issue #113

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,8 @@
 		  even if extra find parameters are specified.
 		* Empty directories now ignore specified exluded paths, as
 		  they can impact whether an "empty" directory can be removed.
+		* Single quotes in extra find params are now quoted,
+		  and no longer generate a syntax error.
 	* Improvements:
 		* findup now includes zero length files by default.  This can
 		  be changed with -size +0c, or the new GUI min size option.
