--- a/doc/NEWS
+++ b/doc/NEWS
@@ -15,6 +15,9 @@
 	* Improvements:
 		* findup now includes zero length files by default.  This can
 		  be changed with -size +0c, or the new GUI min size option.
+		* findup no longer reports already merge duplicates, when there
+		  are other files being checked that are the same size.
+		  (The GUI already had such logic in place).
 		* "Select from same folder" is now less CPU and RAM intensive.
 
 2.44 13/01/14
