don't auto remove duplicate groups when renaming
If we rename a file, then we remove it from the
list as implicitly we would want to keep it.
But if there was just one other duplicate file in the group,
then that would also have been removed from display,
even though the user may want to delete it etc.

Addresses part of issue #119

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -22,6 +22,8 @@
 		  (The GUI already had such logic in place).
 		* findup supports symlinking duplicates as well as hardlinking.
 		* "Select from same folder" is now less CPU and RAM intensive.
+		* A renamed duplicate file no longer auto removes another
+		  item in the group from display, to allow deleting it etc.
 
 2.44 13/01/14
 	* Translations:
