support modern archlinux systems
- a few aur packages lists dpkg as their (make) dependency,
it is therefore pretty normal to find an arch linux system with
dpkg installed, so first check for /etc/arch-release
- `pacman --version` no longer returns exit status 2.
- parsing pacman output became more complex as it auto
humanizes the output sizes, so we use numfmt(1) to convert back.

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -14,6 +14,7 @@
 		  and no longer generate a syntax error.
 		* Multiple adjacent spaces in command line params are preserved
 		  and no longer generate file not found errors.
+		* Listing packages is supported for modern archlinux systems.
 	* Improvements:
 		* findup now includes zero length files by default.  This can
 		  be changed with -size +0c, or the new GUI min size option.
